force-app/main/default/objects/NCMT_RA_Mods__c/NCMT_RA_Mods__c.object-meta.xml
<CustomObject>
    <label>RA Mods</label>
    <nameField>
        <displayFormat>RA-M{00000}</displayFormat>
        <label>RA Mods Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RA Mods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>