force-app/main/default/objects/NCMT_RA_Mods__c/fields/Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category__c</fullName>
    <label>Cost Category</label>
    <referenceTo>NCMT_Cost_Category__c</referenceTo>
    <relationshipLabel>RA Mods</relationshipLabel>
    <relationshipName>RA_Mods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>