force-app/main/default/objects/NCMT_RA_Mods__c/fields/Good__c.field-meta.xml
<CustomField>
    <fullName>Good__c</fullName>
    <label>Good</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>