force-app/main/default/objects/NCMT_RA_Mods__c/fields/Moderate__c.field-meta.xml
<CustomField>
    <fullName>Moderate__c</fullName>
    <label>Moderate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>