force-app/main/default/objects/NCMT_RA_Mods__c/fields/RA_Category__c.field-meta.xml
<CustomField>
    <fullName>RA_Category__c</fullName>
    <label>RA Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>