force-app/main/default/objects/NCMT_RA_Mods__c/fields/RA_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>RA_Category_Type__c</fullName>
    <label>RA Category Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>