force-app/main/default/objects/NCMT_RA_Mods__c/fields/Very_Poor__c.field-meta.xml
<CustomField>
    <fullName>Very_Poor__c</fullName>
    <label>Very Poor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>