force-app/main/default/objects/NCMT_RA_Mods__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RA_Category_Type__c</columns>
    <columns>RA_Category__c</columns>
    <columns>Cost_Category__c</columns>
    <columns>Very_Good__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Good__c</columns>
    <columns>Moderate__c</columns>
    <columns>Poor__c</columns>
    <columns>Very_Poor__c</columns>
    <columns>Fiscal_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>