force-app/main/default/objects/NCMT_RA_Mods__c/listViews/FY_2019.listView-meta.xml
<ListView>
    <fullName>FY_2019</fullName>
    <columns>NAME</columns>
    <columns>RA_Category_Type__c</columns>
    <columns>RA_Category__c</columns>
    <columns>Cost_Category__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Very_Good__c</columns>
    <columns>Good__c</columns>
    <columns>Moderate__c</columns>
    <columns>Poor__c</columns>
    <columns>Very_Poor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2019</value>
    </filters>
    <label>FY-2019</label>
</ListView>